corrected overflow in header

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ header {
     display: block;
     min-width: 1261px;
     width: 100%;
+    overflow: clip;
 }
 
 section {
